--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
                     <div class="team-avatar">
                         <i class="fas fa-user"></i>
                     </div>
-                    <h4>Rajesh Kumar</h4>
+                    <h4>Bhushan</h4>
                     <p>President</p>
                 </div>
                 <div class="team-member-card">
                     <div class="team-avatar">
                         <i class="fas fa-user"></i>
                     </div>
-                    <h4>Priya Sharma</h4>
+                    <h4>Saidhiraj</h4>
                     <p>Vice President</p>
                 </div>
                 <div class="team-member-card">
