--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
                         <div class="leader-badge">President</div>
                     </div>
                     <div class="leader-info">
-                        <h3>Rajesh Kumar</h3>
+                        <h3>Bhushan</h3>
                         <p class="leader-role">President</p>
                         <p class="leader-branch">Computer Science & Engineering</p>
                         <p class="leader-year">Final Year</p>
@@ -79,7 +79,7 @@
                         <div class="leader-badge">Vice President</div>
                     </div>
                     <div class="leader-info">
-                        <h3>Priya Sharma</h3>
+                        <h3>Saidhiraj</h3>
                         <p class="leader-role">Vice President</p>
                         <p class="leader-branch">Information Technology</p>
                         <p class="leader-year">Final Year</p>
