--- a/events.html
+++ b/events.html
@@ -133,6 +133,29 @@
             <div class="events-grid">
                 <div class="event-card" data-category="community">
                     <div class="event-image">
+                        <div class="event-tag blue">Career Guidance · Engineer's Day</div>
+                        <div class="event-date">
+                            <span class="day">15</span>
+                            <span class="month">Sep</span>
+                        </div>
+                    </div>
+                    <div class="event-content">
+                        <h3>Engineer’s Day 2025: Career Guidance Session</h3>
+                        <p>On the occasion of Engineer’s Day 2025, Engineering India Club, Ramdeobaba University conducted an insightful career guidance session for Class 9th and 10th students of Nagpur Madhyamik Vidyalaya, Katol Road, Nagpur.</p>
+                        <div class="event-details">
+                            <span><i class="fas fa-school"></i> Nagpur Madhyamik Vidyalaya, Katol Road, Nagpur</span>
+                            <span><i class="fas fa-calendar"></i> September 15, 2025</span>
+                            <span><i class="fas fa-users"></i> Students of Classes 9th & 10th</span>
+                        </div>
+                        <div class="event-stats">
+                            <span><i class="fas fa-lightbulb"></i> Streams & career paths after Class 10 explained</span>
+                            <span><i class="fas fa-comments"></i> Interactive Q&A and “Dream Behind the Flowchart” activity</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="event-card" data-category="community">
+                    <div class="event-image">
                         <div class="event-tag green">Community Service</div>
                         <div class="event-date">
                             <span class="day">15</span>
