--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <div class="hero-content">
             <div class="hero-tagline">Building Tomorrow's Engineers Today</div>
             <h1 class="hero-title">
-                <!-- <div class="title-orange">Engineering India</div>
-                <div class="title-green">RBU</div> -->
+                <span class="title-orange">Engineering India</span> <span class="title-green">RBU</span>
             </h1>
             <p class="hero-description">
                 A vibrant community where engineering students, alumni, and professionals collaborate to create positive impact through innovation, social initiatives, and cultural activities.
