--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 A vibrant community where engineering students, alumni, and professionals collaborate to create positive impact through innovation, social initiatives, and cultural activities.
             </p>
             <div class="hero-buttons">
-                <button class="btn-primary">
+                <button class="btn-primary" id="becomeMemberBtn">
                     Become a member
                     <i class="fas fa-arrow-right"></i>
                 </button>
@@ -477,6 +477,108 @@
             </div>
         </div>
     </footer>
+
+    <!-- Membership Modal -->
+    <div id="membershipModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Join Engineering India RBU</h2>
+                <span class="modal-close">&times;</span>
+            </div>
+            <div class="modal-body">
+                <p class="modal-description">Fill out the form below to become a member of our community. We'll get back to you soon!</p>
+                <form id="membershipForm" class="membership-form">
+                    <div class="form-group">
+                        <label for="fullName">Full Name <span class="required">*</span></label>
+                        <input type="text" id="fullName" name="fullName" required placeholder="Enter your full name">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="email">Email Address <span class="required">*</span></label>
+                            <input type="email" id="email" name="email" required placeholder="your.email@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone Number <span class="required">*</span></label>
+                            <input type="tel" id="phone" name="phone" required placeholder="+91 98765 43210">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="branch">Engineering Branch <span class="required">*</span></label>
+                            <select id="branch" name="branch" required>
+                                <option value="">Select your branch</option>
+                                <option value="CSE">Computer Science & Engineering</option>
+                                <option value="IT">Information Technology</option>
+                                <option value="CT">Computer Technology</option>
+                                <option value="ME">Mechanical Engineering</option>
+                                <option value="EE">Electrical Engineering</option>
+                                <option value="CE">Civil Engineering</option>
+                                <option value="AE">Aeronautical Engineering</option>
+                                <option value="BT">Biotechnology</option>
+                                <option value="IoT">Internet of Things</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="year">Year of Study <span class="required">*</span></label>
+                            <select id="year" name="year" required>
+                                <option value="">Select year</option>
+                                <option value="1st Year">1st Year</option>
+                                <option value="2nd Year">2nd Year</option>
+                                <option value="3rd Year">3rd Year</option>
+                                <option value="4th Year">4th Year</option>
+                                <option value="Alumni">Alumni</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="studentId">Student ID / Roll Number</label>
+                        <input type="text" id="studentId" name="studentId" placeholder="Enter your student ID (optional)">
+                    </div>
+                    <div class="form-group">
+                        <label for="interests">Areas of Interest (Select all that apply)</label>
+                        <div class="checkbox-group">
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Community Service">
+                                <span>Community Service</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Technical Workshops">
+                                <span>Technical Workshops</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Cultural Activities">
+                                <span>Cultural Activities</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Leadership">
+                                <span>Leadership</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Event Management">
+                                <span>Event Management</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" name="interests" value="Social Media">
+                                <span>Social Media & Design</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Why do you want to join? (Optional)</label>
+                        <textarea id="message" name="message" rows="4" placeholder="Tell us about yourself and why you're interested in joining..."></textarea>
+                    </div>
+                    <div class="form-actions">
+                        <button type="button" class="btn-secondary modal-cancel">Cancel</button>
+                        <button type="submit" class="btn-primary">
+                            <i class="fas fa-paper-plane"></i>
+                            Submit Application
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
