--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Engineering India RBU</h2>
+            
             <p class="section-description">
                 More than just a club, we are a thriving community that brings together engineering minds to create meaningful change in society while fostering personal and professional growth.
             </p>
@@ -358,7 +359,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email Us</h4>
-                            <p>eirbu@rbu.ac.in</p>
+                            <p>engineeringindia.rcoem@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -367,7 +368,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Call Us</h4>
-                            <p>+91 98765 43210</p>
+                            <p>+91 96992 49566</p>
                         </div>
                     </div>
                     <div class="contact-item">
